--- a/website/index.html
+++ b/website/index.html
@@ -11,6 +11,6 @@
 <li>Tio kamrater (1+9, 2+8, osv)</li>
 <li>Dubbletter (1+1, 2+2, osv)</li>
 </ul>
-<p>Här hitter nivår <a href="privacy.html">privacy policy</a>.</p>
+<p>Här hittar nivår <a href="privacy.html">privacy policy</a>.</p>
 </body>
 </html>
