--- a/website/index.html
+++ b/website/index.html
@@ -1,16 +1,18 @@
+<!doctype html>
 <html>
-<head>
-<title>Mattemonster</title>
-</head>
-<body>
-<h1>Mattemonster</h1>
-<p>Mattemonster är en övningsapp för lågstadieelever där de kan öva matte.</p>
-<p><img width="20%" src="screenshot.png" alt="Skärmdump från programmet" /></p>
-<p>För tillfället stödjs följande övningar:</p>
-<ul>
-<li>Tio kamrater (1+9, 2+8, osv)</li>
-<li>Dubbletter (1+1, 2+2, osv)</li>
-</ul>
-<p>Här hittar nivår <a href="privacy.html">privacy policy</a>.</p>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>Mattemonster</title>
+    </head>
+    <body>
+        <h1>Mattemonster</h1>
+        <p>Mattemonster är en övningsapp för lågstadieelever där de kan öva matte.</p>
+        <p><img width="20%" src="screenshot.png" alt="Skärmdump från programmet" /></p>
+        <p>För tillfället stödjs följande övningar:</p>
+        <ul>
+            <li>Tio kamrater (1+9, 2+8, osv)</li>
+            <li>Dubbletter (1+1, 2+2, osv)</li>
+        </ul>
+        <p>Här hittar nivår <a href="privacy.html">privacy policy</a>.</p>
+    </body>
 </html>
